Fix floating button spacing on migrated pages

--- a/admin-dev/themes/new-theme/scss/components/layout/_content_div.scss
+++ b/admin-dev/themes/new-theme/scss/components/layout/_content_div.scss
@@ -61,3 +61,9 @@
     padding-left: $size-navbar-width-mini + ($grid-gutter-width / 2);
   }
 }
+
+.mobile {
+  .content-div {
+    padding-bottom: 5rem;
+  }
+}
